--- a/client/src/App.css
+++ b/client/src/App.css
@@ -337,7 +337,7 @@ dialog {
 }
 
 
-.map img  {
+.map img {
   width: 100%;
   border-radius: 5px;
 
@@ -414,9 +414,7 @@ footer {
 
 }
 
-input,
-select,
-textarea {
+.container input, select, textarea {
   gap: 30px;
   padding: 12px;
   border: none var(--ChampagnePink);
@@ -640,12 +638,20 @@ select {
 
 
 /***************AdoptionList************/
+.AdopListBody{
 
+  background-color: var(--Seashell);
+  h1{
+    padding-left: 65px;
+    padding-top: 50px;
+  }
+}
 .filtrer {
   display: flex;
   gap: 20px;
   margin: 20px auto;
   flex-wrap: wrap;
+   padding-left: 65px;
 }
 
 .filtrer select {
@@ -663,14 +669,14 @@ select {
   flex-wrap: wrap;
   gap: 20xp;
   padding: 60px;
-}
+ }
 
 
 .card {
   width: 230px;
   border: 1px solid var(--ChampagnePink);
   border-radius: 15px;
-  background-color: var(--Seashell);
+  background-color: white;
   cursor: pointer;
   margin: 15px;
 }
@@ -886,12 +892,13 @@ select {
 
 .voluntary-img {
   display: flex;
- width: 100%;
+  width: 100%;
   height: 100%;
 }
-.voluntary-img img{
+
+.voluntary-img img {
   width: auto;
- height: 100%;
+  height: 100%;
 }
 
 .voluntary-title h1 {
@@ -906,8 +913,8 @@ select {
 .main-voluntary {
   display: grid;
   gap: 1rem;
-   text-align: center;
-   margin-top: 4rem;
+  text-align: center;
+  margin-top: 4rem;
 
 }
 
@@ -915,15 +922,15 @@ select {
   font-size: 2.5rem;
 }
 
-.voluntary-cards  {
+.voluntary-cards {
   display: flex;
   gap: 2rem;
   justify-content: center;
-    padding-inline: 2rem;
+  padding-inline: 2rem;
 }
 
 
-.voluntary-form-section  {
+.voluntary-form-section {
   display: flex;
   justify-content: center;
   margin-top: 5rem;
@@ -936,7 +943,7 @@ select {
 }
 
 
-.voluntary-form-section h2  {
+.voluntary-form-section h2 {
   font-size: 2.5rem;
   width: 15ch;
   margin: 0;
@@ -944,199 +951,199 @@ select {
 
 .voluntary-form-section form {
 
-.voluntary-form-section form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  .voluntary-form-section form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
-  input  {
-    background-color: #f1f1f1;
-    
-    font-family: "Lexend", sans-serif;
-    ;
+    input {
+      background-color: #f1f1f1;
 
-  }
+      font-family: "Lexend", sans-serif;
+      ;
 
-  button {
-    text-align: center;
-    background-color: var(--Seashell);
-    font-family: "Lexend", sans-serif;
-    border: none;
-    border-radius: 20px;
-    padding: .8rem;
-    font-weight: 700;
-    cursor: pointer;
+    }
+
+    button {
+      text-align: center;
+      background-color: var(--Seashell);
+      font-family: "Lexend", sans-serif;
+      border: none;
+      border-radius: 20px;
+      padding: .8rem;
+      font-weight: 700;
+      cursor: pointer;
 
       &:hover {
         background-color: var(--ChampagnePink);
 
       }
+    }
+    } 
+
+
+  }
+
+  .voluntary-form-section textarea {
+    resize: none;
+    height: 150px;
+    width: 300px;
+    background-color: #f1f1f1;
+    font-family: "Lexend", sans-serif;
+
+  }
+
+  .voluntary-form-text {
+    display: flex;
+    flex-direction: column;
   }
 
 
-}
-
-.voluntary-form-section textarea  {
-  resize: none;
-  height: 150px;
-  width: 300px;
-  background-color: #f1f1f1;
-  font-family: "Lexend", sans-serif;
-
-}
 
 
-  background-color: #f1f1f1;
-  ;
+  /************************* MEDIAQUERIES *************************/
 
-}
+  @media (max-width: 960px) {
+    .main-home {
+      padding: 2rem;
+    }
 
-.voluntary-form-text {
-  display: flex;
-  flex-direction: column;
-}
+    .section-cards {
+      grid-template-rows: repeat(3, 1fr);
+      grid-template-columns: 1fr;
+    }
 
+    .cards {
+      min-width: fit-content;
+      padding-top: 2rem;
+    }
 
+    .cards:last-child {
+      display: none;
+    }
 
-
-/************************* MEDIAQUERIES *************************/
-
-@media (max-width: 960px) {
-  .main-home {
-    padding: 2rem;
+    section img {
+      height: auto;
+      max-width: 30vw;
+      object-fit: cover;
+      object-position: center;
+    }
   }
 
-  .section-cards {
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: 1fr;
+
+
+  /*******************MYPROFILE****************************/
+  .MyProfile {
+    max-width: 900px;
+    margin: auto;
+    gap: 25px;
+
   }
 
-  .cards {
-    min-width: fit-content;
-    padding-top: 2rem;
+  .ProfileSection {
+    display: flex;
+    gap: 25px;
+    align-items: center;
+    flex-wrap: wrap;
   }
 
-  .cards:last-child {
-    display: none;
+  .ProfilePicture {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 3px solid var(--ChampagnePink);
   }
 
-  section img {
-    height: auto;
-    max-width: 30vw;
+  .ProfileImage {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    object-position: center;
   }
-}
 
 
+  .ProfileInfo .Info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
 
-/*******************MYPROFILE****************************/
-.MyProfile {
-  max-width: 900px;
-  margin: auto;
-  gap: 25px;
-  
-}
-.ProfileSection {
-  display: flex;
-  gap: 25px;
-  align-items: center;
-  flex-wrap: wrap;
-}
+  .ProfileInfo button {
+    background: none;
+    border: none;
+    color: gray;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
 
-.ProfilePicture {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  overflow: hidden;
-  border: 3px solid var(--ChampagnePink); 
-}
+  hr {
+    margin: 25px 0;
+  }
 
-.ProfileImage {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+  .PetContent {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+  }
 
+  .PetImage {
+    width: 180px;
+    height: auto;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.ProfileInfo .Info {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
+  .PetImage img {
+    width: 100%;
+    height: auto;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
 
-.ProfileInfo button {
-  background: none;
-  border: none;
-  color: gray;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
+  .pet-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
-hr {
-  margin: 25px 0;
-}
+  .pet-info h3 {
+    margin: 0;
+    font-size: 30px;
+  }
 
-.PetContent {
-  display: flex;
-  align-items: flex-start;
-  gap: 10px;
-}
+  .edit-btn {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: var(--Melon);
+    border: none;
+    border-radius: 20px;
+    font-weight: bold;
+    cursor: pointer;
+  }
 
-.PetImage {
-width: 180px; 
-  height: auto; 
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  .AddPetButton {
+    margin-top: 30px;
+    text-align: center;
+  }
 
-.PetImage img {
- width: 100%;
-  height: auto;
-  max-height: 200px; 
-  object-fit: cover;
-  border-radius: 8px;
-}
-.pet-info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
+  .AddPetButton button {
+    background-color: var(--Melon);
+    color: rgb(0, 0, 0);
+    border: none;
+    padding: 15px 20px;
+    border-radius: 30px;
+    font-size: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin: 0 auto;
+    display: block;
+  }
 
-.pet-info h3 {
-  margin: 0;
-  font-size: 30px;
-}
-
-.edit-btn {
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: var(--Melon);
-  border: none;
-  border-radius: 20px;
-  font-weight: bold;
-  cursor: pointer;
-}
-.AddPetButton {
-  margin-top: 30px;
-  text-align: center;
-}
-
-.AddPetButton button {
-  background-color: var(--Melon);
-  color: rgb(0, 0, 0);
-  border: none;
-  padding:15px 20px;
-  border-radius: 30px;
-  font-size:18px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  margin: 0 auto; 
-  display: block;
- }
+ 
