--- a/client/src/App.css
+++ b/client/src/App.css
@@ -116,6 +116,12 @@ dialog {
 
   input {
     background-color: #f1f1f1;
+    gap: 30px;
+    padding: 12px;
+    border: none var(--ChampagnePink);
+    border-radius: 10px;
+    font-size: 14px;
+
   }
 }
 
@@ -381,27 +387,62 @@ footer {
 
 
 /*Css de CreatePost.jsx*/
-.container {
-  max-width: 600px;
+.create-post-container {
+  display: flex;
+  justify-content: space-between;
   margin: auto;
-  padding: 20px;
   font-family: "Lexend", sans-serif;
+  height: 80vh;
+  border-bottom: 1px solid var(--Melon);
+  border-top: 1px solid var(--Melon);
 }
 
-.container h1 {
+.create-post-form-container h1 {
   font-size: 28px;
   font-weight: bold;
   margin-bottom: 20px;
-  padding-top: 50px;
+
 }
 
+.create-post-form-container {
+  display: flex;
+  flex-direction: column;
+  padding-left: 3rem;
+  margin: auto;
+
+}
+
+
+.create-post-photo {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+
+}
+
+.create-post-photo img {
+  display: block;
+  object-fit: cover;
+  height: 100%;
+}
+
+
+.create-post-form-container form{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 100%;
+}
 .information1 {
   display: flex;
   align-items: center;
-  gap: 30px;
-  margin-bottom: 25px;
-  padding-top: 10px;
+  gap: 30px;  
 
+  input{
+    width: 100%;
+  }
 }
 
 .information2 {
@@ -409,18 +450,20 @@ footer {
   align-items: center;
   gap: 30px;
   margin-bottom: 15px;
-  padding-top: 30px;
-  padding-bottom: 40px;
+
 
 }
 
-.container input, select, textarea {
+.create-post-form-container input,
+select,
+textarea {
   gap: 30px;
   padding: 12px;
   border: none var(--ChampagnePink);
-  background-color: var(--PaleDogwood);
+  background-color: var(--Seashell);
   border-radius: 10px;
   font-size: 14px;
+  width: 100%;
 }
 
 select {
@@ -429,14 +472,22 @@ select {
 
 .photo {
   display: flex;
-  gap: 10px;
-  padding-bottom: 30px;
   align-items: center;
-  margin-bottom: 15px;
+  box-sizing: border-box;
+  padding: 1rem;
+  background-color: var(--Seashell);
+  border-radius: 10px;
+  cursor: pointer;
+  max-width: 400px;
+
+  span {
+    margin-left: .8rem;
+    font-size: 14px;
+  }
 }
 
 .photo input {
-  flex: .7;
+  
   border-radius: 10px 0 0 10px;
 }
 
@@ -466,31 +517,12 @@ select {
 }
 
 .textareaCp {
-  width: 450px;
+  width: 100%;
+  box-sizing: border-box;
   resize: none;
-  height: 170px;
+  height: 100px;
 
 }
-
-.btn-submit {
-  width: 65%;
-  padding: 14px;
-  background-color: var(--Melon);
-  color: black;
-  border: none;
-  border-radius: 999px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.btn1 {
-  display: flex;
-  justify-content: center;
-  padding-top: 50px;
-
-}
-
-
 
 
 
@@ -503,6 +535,12 @@ select {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+}
+
+.informationAdoption {
+  background-color: var(--Seashell);
+  padding: 3rem;
+  box-sizing: border-box;
 }
 
 .informationAdoption h1 {
@@ -540,7 +578,7 @@ select {
 }
 
 .sub {
-  padding-left: 700px;
+  place-self: center;
   font-size: 40px;
 }
 
@@ -556,7 +594,6 @@ select {
   gap: 16px;
 }
 
-.form-grid input,
 .form-grid select {
   padding: 10px;
   font-size: 16px;
@@ -565,6 +602,17 @@ select {
   outline: none;
   transition: border 0.2s ease-in-out;
 }
+
+.form-grid input {
+  background-color: var(--PaleDogwood);
+  gap: 30px;
+  padding: 12px;
+  border: none var(--ChampagnePink);
+  border-radius: 10px;
+  font-size: 14px;
+
+}
+
 
 .form-grid input:focus,
 .form-grid select:focus {
@@ -587,6 +635,7 @@ select {
   background-color: var(--Seashell);
   border: solid 1px var(--ChampagnePink);
   padding-bottom: 10px;
+
 }
 
 .slides-wrapper {
@@ -638,20 +687,22 @@ select {
 
 
 /***************AdoptionList************/
-.AdopListBody{
+.AdopListBody {
 
   background-color: var(--Seashell);
-  h1{
+
+  h1 {
     padding-left: 65px;
     padding-top: 50px;
   }
 }
+
 .filtrer {
   display: flex;
   gap: 20px;
   margin: 20px auto;
   flex-wrap: wrap;
-   padding-left: 65px;
+  padding-left: 65px;
 }
 
 .filtrer select {
@@ -669,7 +720,7 @@ select {
   flex-wrap: wrap;
   gap: 20xp;
   padding: 60px;
- }
+}
 
 
 .card {
@@ -772,7 +823,8 @@ select {
 .staff-pictures {
   width: 100%;
 }
-.staff-pictures img{
+
+.staff-pictures img {
   width: 100%;
   border-radius: 10px;
 }
@@ -824,7 +876,16 @@ select {
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
 
+  input {
+    gap: 30px;
+    padding: 12px;
+    border: none var(--ChampagnePink);
+    background-color: #f1f1f1;
+    border-radius: 10px;
+    font-size: 14px;
+  }
 }
+
 
 .input-group {
   display: flex;
@@ -956,170 +1017,168 @@ select {
 
 .voluntary-form-section form {
 
-  .voluntary-form-section form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
-    input {
-      background-color: #f1f1f1;
-
-      font-family: "Lexend", sans-serif;
-      ;
-
-    }
-
-    button {
-      text-align: center;
-      background-color: var(--Seashell);
-      font-family: "Lexend", sans-serif;
-      border: none;
-      border-radius: 20px;
-      padding: .8rem;
-      font-weight: 700;
-      cursor: pointer;
-
-      &:hover {
-        background-color: var(--ChampagnePink);
-
-      }
-    }
-    } 
-
-
-  }
-
-  .voluntary-form-section textarea {
-    resize: none;
-    height: 150px;
-    width: 300px;
+  input {
     background-color: #f1f1f1;
+    gap: 30px;
+    padding: 12px;
+    border: none var(--ChampagnePink);
+    border-radius: 10px;
+    font-size: 14px;
+
+
+  }
+
+  button {
+    text-align: center;
+    background-color: var(--Seashell);
     font-family: "Lexend", sans-serif;
-
-  }
-
-  .voluntary-form-text {
-    display: flex;
-    flex-direction: column;
-  }
-
-
-
-
-
-
-  /*******************MYPROFILE****************************/
-  .MyProfile {
-    max-width: 900px;
-    margin: auto;
-    gap: 25px;
-
-  }
-
-  .ProfileSection {
-    display: flex;
-    gap: 25px;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-
-  .ProfilePicture {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 3px solid var(--ChampagnePink);
-  }
-
-  .ProfileImage {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-
-  .ProfileInfo .Info {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-  }
-
-  .ProfileInfo button {
-    background: none;
-    border: none;
-    color: gray;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-  }
-
-  hr {
-    margin: 25px 0;
-  }
-
-  .PetContent {
-    display: flex;
-    align-items: flex-start;
-    gap: 10px;
-  }
-
-  .PetImage {
-    width: 180px;
-    height: auto;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .PetImage img {
-    width: 100%;
-    height: auto;
-    max-height: 200px;
-    object-fit: cover;
-    border-radius: 8px;
-  }
-
-  .pet-info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .pet-info h3 {
-    margin: 0;
-    font-size: 30px;
-  }
-
-  .edit-btn {
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: var(--Melon);
     border: none;
     border-radius: 20px;
-    font-weight: bold;
+    padding: .8rem;
+    font-weight: 700;
     cursor: pointer;
-  }
 
-  .AddPetButton {
-    margin-top: 30px;
-    text-align: center;
-  }
+    &:hover {
+      background-color: var(--ChampagnePink);
 
-  .AddPetButton button {
-    background-color: var(--Melon);
-    color: rgb(0, 0, 0);
-    border: none;
-    padding: 15px 20px;
-    border-radius: 30px;
-    font-size: 18px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    margin: 0 auto;
-    display: block;
+    }
   }
+}
 
- 
+
+.voluntary-form-section textarea {
+  resize: none;
+  height: 150px;
+  width: 300px;
+  background-color: #f1f1f1;
+  font-family: "Lexend", sans-serif;
+
+}
+
+.voluntary-form-text {
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+
+
+
+/*******************MYPROFILE****************************/
+.MyProfile {
+  max-width: 900px;
+  margin: auto;
+  gap: 25px;
+
+}
+
+.ProfileSection {
+  display: flex;
+  gap: 25px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.ProfilePicture {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 3px solid var(--ChampagnePink);
+}
+
+.ProfileImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.ProfileInfo .Info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.ProfileInfo button {
+  background: none;
+  border: none;
+  color: gray;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+hr {
+  margin: 25px 0;
+}
+
+.PetContent {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.PetImage {
+  width: 180px;
+  height: auto;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.PetImage img {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.pet-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.pet-info h3 {
+  margin: 0;
+  font-size: 30px;
+}
+
+.edit-btn {
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: var(--Melon);
+  border: none;
+  border-radius: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.AddPetButton {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.AddPetButton button {
+  background-color: var(--Melon);
+  color: rgb(0, 0, 0);
+  border: none;
+  padding: 15px 20px;
+  border-radius: 30px;
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin: 0 auto;
+  display: block;
+}
